--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -42,7 +42,7 @@ body {
 }
 
 @media (max-width: 800px) {
-  a.ButtonLink {
+  a.ButtonLink { 
     position: fixed;
     left: 0;
     right: 0;
@@ -51,5 +51,6 @@ body {
     border-radius: 0;
     border: 0;
     text-align: center;
+    /*display: none; Only in the Registers Page*/
   }
 }
