--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -1,6 +1,11 @@
 .Logo {
   max-width: 168px;
 }
+
+.Logo:hover{
+  opacity: 0.5;
+}
+
 @media (max-width: 800px) {
   .Logo {
     max-width: 105px;
@@ -26,10 +31,12 @@
   background: var(--black);
   border-bottom: 2px solid var(--primary);
 }
+
 body {
   --bodyPaddingTop: 94px;
   padding-top: var(--bodyPaddingTop);
 }
+
 @media (max-width: 800px) {
   .Menu {
     height: 40px;
